syntax = "proto3";

option go_package = "github.com/SkarpKat/A-Distributed-Auction-System";

package Auction;

service Auction {
    rpc Bid (BidRequest) returns (BidResponse) {}
    rpc Status (StatusRequest) returns (StatusResponse) {}
    rpc Result (ResultRequest) returns (ResultResponse) {}
}

message BidRequest {
    string bidder = 1;
    int64 bid = 2;
}

message BidResponse {
    string bidder = 1;
    int64 bid = 2;
    string status = 3;
}

message ResultRequest {
    string bidder = 1;
    int64 bid = 2;
}

message ResultResponse {
    string bidder = 1;
    int64 bid = 2;
    string status = 3;
}

message StatusRequest {
    string bidder = 1;
}

message StatusResponse {
    string bidder = 1;
    int64 bid = 2;
    string status = 3;
    bool winner = 4;
}


